--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,6 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-            docker build -t latest .
-            docker run  --name nlu_test_run_container latest 
-          
+            #docker build -t latest .
+            #docker run  --name nlu_test_run_container latest 
+            python3.6 test.py
