--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,4 +30,6 @@ jobs:
         run: |
             #docker build -t latest .
             #docker run  --name nlu_test_run_container latest 
+            python -m pip install selenium
+            python -m pip install pandas 
             python test.py
